--- a/src/components/TimePage/time/time.module.css
+++ b/src/components/TimePage/time/time.module.css
@@ -6,7 +6,9 @@
 }
 .HoursMain{
     height: 50%;
-    padding: 10px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 
