--- a/src/components/EventPage/EventFooter/eventFooter.module.css
+++ b/src/components/EventPage/EventFooter/eventFooter.module.css
@@ -28,6 +28,7 @@
 .eventDay {
     color: #98ABBE;
     font-size: 19px;
+    font-weight: bold;
     letter-spacing: 2.03px;
     line-height: 23px;
     width: 295px;
